--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
     "unplugin-vue-components": "^0.19.6",
-    "vite": "^2.9.9"
+    "vite": "^2.9.9",
+    "vite-plugin-vue-setup-extend": "^0.4.0"
   }
 }
